<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/resolution" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/marginTxtResult"
                android:layout_marginEnd="@dimen/marginTxtResult"
                android:gravity="end"
                android:textSize="@dimen/sizeTxtResult"
                tools:text="0" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/marginBtn"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:text="@string/clear"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toEndOf="@id/btn7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_7"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnClear" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_8"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn9"
                app:layout_constraintStart_toEndOf="@id/btn7"
                app:layout_constraintTop_toBottomOf="@id/btnClear" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_9"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btnMulti"
                app:layout_constraintStart_toEndOf="@id/btn8"
                app:layout_constraintTop_toBottomOf="@id/btnClear" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_4"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn7" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_5"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn6"
                app:layout_constraintStart_toEndOf="@id/btn4"
                app:layout_constraintTop_toBottomOf="@id/btn7" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_6"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btnMinus"
                app:layout_constraintStart_toEndOf="@id/btn5"
                app:layout_constraintTop_toBottomOf="@id/btn7" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_1"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn4" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_2"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn3"
                app:layout_constraintStart_toEndOf="@id/btn1"
                app:layout_constraintTop_toBottomOf="@id/btn4" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_3"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btnEqual"
                app:layout_constraintStart_toEndOf="@id/btn2"
                app:layout_constraintTop_toBottomOf="@id/btn4" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/point"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btn0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn1" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/_0"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toStartOf="@id/btnPlus"
                app:layout_constraintStart_toEndOf="@id/btnPoint"
                app:layout_constraintTop_toBottomOf="@id/btn1" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:text="@string/plus"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toEndOf="@id/btn3"
                app:layout_constraintStart_toEndOf="@id/btn0"
                app:layout_constraintTop_toBottomOf="@id/btn1" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/division"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/btnMulti"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/multi"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn9"
                app:layout_constraintTop_toBottomOf="@id/btnDivision" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/minus"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn6"
                app:layout_constraintTop_toBottomOf="@id/btnMulti" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/marginBtn"
                android:layout_marginEnd="@dimen/marginBtn"
                android:text="@string/equal"
                android:textSize="@dimen/sizeBtnTxt"
                app:layout_constraintBottom_toBottomOf="@id/btnPlus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn3"
                app:layout_constraintTop_toBottomOf="@id/btnMinus" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>